--- a/dadjokes-app/src/App.css
+++ b/dadjokes-app/src/App.css
@@ -2,10 +2,11 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+nav {
+  width: 500px;
+  display: flex;
+  margin-top: 25px;
+  justify-content: space-evenly;
 }
 
 .App-header {
@@ -17,17 +18,4 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
